--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>百校直通车管理</title>
 </head>
-<body>
-
+<body style="text-align: center;">
+    <h1>
+        百校直通车管理入口(访问地址请加index.php)
+    </h1>
 </body>
 </html>
